--- a/assets/stylesheets/colors/red.css
+++ b/assets/stylesheets/colors/red.css
@@ -1,72 +1,118 @@
-
-
-/* ==============================================
-Red-2 Color Skin
-=============================================== */
-
-::-moz-selection {
- background: #D40436;
-}
-::selection {
-	background: #D40436;
-}
-
-
-.btn-home a,
-.skillbar-title,
-.skillbar-bar,
-#filters li span.active,
-#filters li span:hover,
-#filters li span:focus,
-.btn-primary,
+.btn-primary,.btn-primary:hover,.btn-primary:focus,.btn-primary:active,.btn-primary:focus:active,.btn-ghost:hover,.btn-light:hover,.btn-primary.active,.btn-primary:active,.open>.dropdown-toggle.btn-primary,.btn-primary.disabled, .btn-primary.disabled.active, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled:focus, .btn-primary.disabled:hover, .btn-primary[disabled], .btn-primary[disabled].active, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled]:focus, .btn-primary[disabled]:hover, fieldset[disabled] .btn-primary, .btn-ghost-color:hover,.btn-primary.btn-appear:hover,
+.bg-color,
+#price-list .button:hover,
+#price-list .featured .button,
+.progress-bar,
+.scroll-top,
+.portfolioFilter a.current,
+.portfolioFilter a:hover,  
 .label-primary,
-#contact input.submit,
-.blog-list li:hover,
-.cbp-l-filters-button .cbp-filter-item-active,
-.cbp-l-filters-button .cbp-filter-counter,
-.nav > li > a:hover, .nav > li > a:focus,
-.shop-btn-box:hover,
-.pagination > .active > a {
-	background: #D40436;
+.panel-title,
+#buttonTabs li.active a,
+.box-style5,
+.box-style7,
+.box-style10,
+.progress-bars-4 .progress-bar-tooltip, 
+.timeline::before,
+h4.fitness-label,
+.bg-overlay:after,
+.label-items-in-cart,
+.cbp-l-filters-button .cbp-filter-item.cbp-filter-item-active,
+.cbp-l-filters-button .cbp-filter-item:hover,
+.contact input.submit,
+.contact-1 input.submit,
+.blog-pagination>.active>a, 
+.blog-pagination>.active>a:hover,
+.video-container:hover:after,
+.connected-icons li a i:after,
+.connected-icons li a i:hover:after,
+.phone-number h1:after
+{
+    background-color:  #ec004e
 }
-
-
-a,
-.about-icon .fa-circle,
+a:focus,
+a:hover, 
+.color,
+.connected-icon a i,
+.testimonial-name,
+.testimonial-name small,
 .highlight,
-figure figcaption a:hover,
-.dropdown-menu > li > a:hover, 
-.navbar-default .navbar-nav > .hovernav:hover > a,
-.navbar-default .navbar-nav > .hovernav:hover > a:hover, 
-.nav > li > a:hover, 
-.nav > li > span:hover, 
-.navbar-default .navbar-nav > li > a:hover, 
-.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,  
-.portfolio-links a:hover,
-.portfolio-links .icon:hover,
-.connected-icon a:focus,
-.connected-icon a:hover,
-.btn-link,
-.post-title a:hover,
-.post-title a:focus,
-#main-nav .current,
-.star-rating span,
-.twitter-logo .fa,
-.footer-logo a:hover,
-.effects .img a:hover
- {
-	color: #D40436;
+.btn-ghost-color,
+.contact-details-social li a:hover,
+.portfolioContainer li .info i,
+.project-changer li a,
+#iconTabs li.active a span,
+.box a,
+.box.box-style6 a,
+.box.box-style8b a,
+.about-me-social li a:hover,    
+.icon-box-hover i,
+.footer.style-1 li a:hover,
+.footer.style-1 > a:hover,
+.countdown-big h1,
+.home-blog-filters .cbp-filter-item-active.cbp-filter-item,
+.home-blog-filters .cbp-filter-item:hover,
+.home-filters-dark .cbp-filter-item:hover,
+.home-filters-dark .cbp-filter-item-active.cbp-filter-item,
+.connected-icons li a h4,
+.footer.style-1.dark ul li a,
+.btn-ghost,
+#twitter-feed-slider .user a:hover:before,
+#twitter-feed-slider .timePosted a:hover,
+#twitter-feed-slider .interact a:hover:before,
+#twitter-feed-list ul li:first-child .user a:hover:before,
+.project-nav a:hover h5,
+.project-nav a:hover i,
+.color,
+.feature-center.white i.color,
+.counter h1,
+.team figure figcaption a:hover,
+.portfolio figure figcaption p, 
+a:hover .subheading,
+.blog-columns .blog-thumb-desc a:hover h4,
+.blog-standard a:hover h4,
+.blog-pagination li a:hover,
+.sidebar-share a:hover,
+.shop .cbp-l-caption-body a:hover,
+.team-caption ul li a:hover,
+.read-more-link.color span,
+.read-more-link2.color span,
+#clock .digit
+{
+    color:  #ec004e
+}
+.btn-primary,
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary:focus:active,
+.btn-ghost,
+.btn-ghost:hover,
+.btn-light:hover,
+.section-heading hr, hr.separator,
+.btn-primary.btn-appear:hover,
+.accordian-style2 .panel-title,
+.music-bottom .play-btn,
+.play-bottom .play-btn,
+.timeline-bullet,
+.contact input:focus, textarea:focus, select:focus,
+.contact.box-style textarea:focus,
+.btn-primary.active, .btn-primary:active,
+.price-table-featured .price-box
+{ 
+    border-color:  #ec004e
+}
+#price-list .featured .price-table,
+.progress-bars-4 .progress-bar-tooltip:after
+{
+    border-top-color:  #ec004e
+}
+#video .play-btn:after,
+.music-bottom .play-btn:after,
+.play-bottom .play-btn:after,
+blockquote {
+    border-left-color:  #ec004e
+}
+.progress-svg circle {
+  	stroke:  #ec004e
 }
 
 
-.phone-info {
-	background: rgba(212, 4, 54, 0.2);
-}
-
-.cbp-l-filters-button .cbp-filter-counter:before {
-	border-top: 4px solid #D40436;
-}
-
-.btn-home a {
-    box-shadow: 0 3px 0 rgba(212, 4, 54, .5);
-}
+ 
